feat: ajout de switch, kill, et chute

--- a/TPs/TP1/TP1_3match_squelette_divs_DOM/squelette/index.html
+++ b/TPs/TP1/TP1_3match_squelette_divs_DOM/squelette/index.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <html lang="fr">
   <head>
     <title>Un jeu type candy crush version 1</title>
@@ -11,7 +12,7 @@
     <h1>Jeu type candy crush... version avec utilisation de divs</h1>
     <div id="main">
       <div id="infos">
-        <div>Temps : 0</div>
+        <div id="tmps">Temps : 0</div>
         <div>Score : 0</div>
         <div>Niveau : 0</div>
       </div>
@@ -101,4 +102,3 @@
     </div>
   </body>
 </html>
-
